crates/canvas-cli/tests/e2e/snapshots/exit_6.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 6,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "error",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 4,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "resolution",
    "details": {
      "candidates": [
        {
          "code": "SYN-600",
          "id": "60100",
          "name": "Synthetic Course"
        }
      ]
    },
    "http_status": null,
    "message": "not found",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
