crates/canvas-cli/tests/e2e/snapshots/exit_9.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 9,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "recovery",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 3,
    "cost": null,
    "storage": 0
  },
  "result": {
    "attribution": null,
    "candidates": [],
    "error": "no attempt is visible; the original request may still complete; submission reconcile re-checks; --assume-not-submitted becomes available after 30 minutes",
    "files": [],
    "journal_id": "00000000-0000-4000-8000-00000000000j",
    "outcome": "recovery",
    "post_status": 500,
    "posted": null,
    "receipt_id": null,
    "response_kind": "canvas-error",
    "server_match": null,
    "state": "outcome_unknown",
    "text": {
      "input_sha256": "5891b5b522d5df086d0ff0b110fbd9d21bb4fc7163af34d08286a2e846f6be03",
      "sent_sha256": "8f7f27cedc8acf48084063da78451ae9962da2446289983c782736f78476b683",
      "transform": "text-to-html"
    },
    "url": null
  },
  "schema": "canvas-cli/submit@1",
  "warnings": [
    "no attempt is visible; the original request may still complete; submission reconcile re-checks; --assume-not-submitted becomes available after 30 minutes"
  ]
}
