crates/canvas-cli/tests/e2e/snapshots/files_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  ID     SOURCE     PATH      NAME            SIZE  
  501    listing    Week 1    syllabus.pdf    2048  
--- stderr ---
