crates/canvas-cli/tests/e2e/snapshots/grades_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "courses",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "active",
      "source": "cache",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "enrollment_grades",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "period:none",
      "source": "cache",
      "stale": false
    },
    {
      "complete": true,
      "count": 2,
      "dataset": "course_totals",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "cache",
      "stale": false
    }
  ],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "course": null,
    "courses": [
      {
        "course": {
          "code": "SYN-600",
          "enrollment_state": "active",
          "html_url": "<origin>/courses/60100",
          "id": "60100",
          "is_favorite": true,
          "name": "Synthetic Course",
          "restricted": false,
          "term": {
            "end_at": "2040-12-15T10:00:00Z",
            "id": "60010",
            "name": "Synthetic Term",
            "start_at": "2040-08-25T04:00:00Z"
          }
        },
        "grades": {
          "current_grade": "C",
          "current_score": 73.25,
          "final_grade": "C",
          "final_score": 73.25,
          "period": {
            "id": null,
            "mode": "all",
            "title": null
          }
        },
        "unavailable_reason": null
      }
    ],
    "period_mode": "all"
  },
  "schema": "canvas-cli/grades@1",
  "warnings": []
}
