crates/canvas-cli/tests/e2e/snapshots/grades_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  CODE       NAME                PERIOD    GRADE  
  SYN-600    Synthetic Course    all       C      
--- stderr ---
