crates/canvas-cli/tests/e2e/snapshots/identity_list_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": null,
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "identities": [
      {
        "journals_pending": 0,
        "key": "<identity>",
        "name": null,
        "origin": "<origin>",
        "profiles": [],
        "size_bytes": 0,
        "user_id": "1"
      }
    ]
  },
  "schema": "canvas-cli/identity@1",
  "warnings": []
}
