crates/canvas-cli/tests/e2e/snapshots/identity_list_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
<identity>  <origin> / 60001  profiles=[]  size=<n> bytes
--- stderr ---
